# rc

./: .codecov.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
bit_vector/: Cargo.toml
bit_vector/src/: lib.rs  tests.rs
cursor/: Cargo.toml
cursor/src/: common.rs  lib.rs  tests.rs
rcalc/: Cargo.toml
rcalc/src/: lexer.rs  main.rs  rcalc.rs  tests.rs
rcc/: Cargo.toml
rcc/src/: lib.rs  main.rs  rcc.rs
rcc/src/analyser/: expr_visit.rs  file.rs  mod.rs  scope.rs  sym_resolver.rs
rcc/src/ast/: expr.rs  file.rs  item.rs  mod.rs  pattern.rs  stmt.rs  type_anno.rs  types.rs  visit.rs
rcc/src/code_gen/: code_generator.rs  mod.rs  riscv32.rs  simple_allocator.rs
rcc/src/ir/: cfg.rs  ir_build.rs  ir_gen.rs  linear_ir.rs  mod.rs  tests.rs  var_name.rs
rcc/src/lexer/: Cargo.toml  mod.rs  tests.rs  token.rs
rcc/src/parser/: expr.rs  file.rs  item.rs  mod.rs  pattern.rs  stmt.rs  tests.rs  type_anno.rs  types.rs
rcc/src/strenum/: Cargo.toml
rcc/src/strenum/src/strenum_macro/: Cargo.toml
rcc/src/strenum/src/strenum_macro/src/: lib.rs
rcc/src/strenum/src/strenum_macro/strenum_core/: Cargo.toml
rcc/src/strenum/src/strenum_macro/strenum_core/src/: lib.rs
rcc/src/tests/: in1.txt  in2.txt  in3.txt  in4.txt  in5.txt  in6.txt  mod.rs  out1.txt  out2.txt  out3.txt  out4.txt  out5.txt  rcc_tests.rs
src/lexer/: Cargo.toml
src/lexer/src/: common.rs
src/rcalc/: Cargo.toml
src/rcalc/src/: lexer.rs  main.rs  rcalc.rs  tests.rs
src/rcc/: Cargo.toml
src/rcc/src/strenum/: Cargo.toml
src/rcc/src/strenum/src/: lib.rs
(+55 files in other folders)
