[package]
name = "strenum"
version = "0.1.0"
authors = ["jiang <392711804@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[lib]
proc-macro = true
path = "src/lib.rs"