[package]
name = "strenum_macro"
version = "0.1.0"
authors = ["jiang <392711804@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full"] }
strenum_core = {path = "strenum_core" }

[lib]
proc-macro = true
path = "src/lib.rs"
